--- a/Proj/code/LS/LSApp/mainwindow.ui
+++ b/Proj/code/LS/LSApp/mainwindow.ui
@@ -20,7 +20,7 @@
       <x>0</x>
       <y>800</y>
       <width>600</width>
-      <height>224</height>
+      <height>190</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -34,7 +34,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>10</y>
+        <y>0</y>
         <width>582</width>
         <height>207</height>
        </rect>
@@ -42,6 +42,12 @@
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QLabel" name="label">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="font">
           <font>
            <pointsize>24</pointsize>
@@ -71,7 +77,7 @@
          <property name="minimumSize">
           <size>
            <width>580</width>
-           <height>80</height>
+           <height>30</height>
           </size>
          </property>
          <property name="font">
@@ -108,7 +114,7 @@ p, li { white-space: pre-wrap; }
          <property name="minimumSize">
           <size>
            <width>0</width>
-           <height>50</height>
+           <height>30</height>
           </size>
          </property>
          <property name="font">
@@ -221,6 +227,40 @@ border-radius: 5px
 background-color: rgb(0, 0, 0);
 border-color: black</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="horizontalLayoutWidget_6">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>990</y>
+      <width>581</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_5">
+     <item>
+      <widget class="QLabel" name="label_status">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(0, 0, 0);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
  </widget>
