--- a/Proj/code/LS/LSApp/resources.qrc
+++ b/Proj/code/LS/LSApp/resources.qrc
@@ -17,5 +17,7 @@
         <file>resources/icons/swipe_right_inverted.png</file>
         <file>resources/icons/swipe_left_inverted.png</file>
         <file>resources/style/stylesheet.qss</file>
+        <file>resources/icons/fist.png</file>
+        <file>resources/icons/fist_inverted.png</file>
     </qresource>
 </RCC>
