--- a/Proj/code/LS/LSApp/sharwindow.ui
+++ b/Proj/code/LS/LSApp/sharwindow.ui
@@ -194,8 +194,7 @@ border-radius: 5px
          <bool>false</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">image: url(:/resources/icons/finger_pointing_inverted.png);
-/*
+         <string notr="true">image: url(:/resources/icons/fist_inverted.png);/*
 background-color: rgb(186, 189, 182);
 background-repeat: no-repeat; 
 */</string>
@@ -263,8 +262,7 @@ background-repeat: no-repeat;
          <bool>false</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">image: url(:/resources/icons/finger_pointing_inverted.png);
-/*
+         <string notr="true">image: url(:/resources/icons/fist_inverted.png);/*
 background-color: rgb(186, 189, 182);
 background-repeat: no-repeat; 
 */</string>
@@ -486,8 +484,7 @@ border-radius: 5px
          <bool>false</bool>
         </property>
         <property name="styleSheet">
-         <string notr="true">image: url(:/resources/icons/finger_pointing_inverted.png);
-/*
+         <string notr="true">image: url(:/resources/icons/fist_inverted.png);/*
 background-color: rgb(186, 189, 182);
 background-repeat: no-repeat; 
 */</string>
