--- a/Proj/code/LS/LSApp/imgfiltwindow.ui
+++ b/Proj/code/LS/LSApp/imgfiltwindow.ui
@@ -26,7 +26,7 @@
     <string notr="true">background-color: rgb(0, 0, 0);</string>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="main">
     <widget class="QWidget" name="horizontalLayoutWidget_2">
@@ -34,7 +34,7 @@
       <rect>
        <x>10</x>
        <y>100</y>
-       <width>581</width>
+       <width>588</width>
        <height>89</height>
       </rect>
      </property>
@@ -43,7 +43,7 @@
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <item>
-       <widget class="QPushButton" name="pb_cancel_share">
+       <widget class="QPushButton" name="pb_cancel">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -86,8 +86,8 @@ border-radius: 5px
         </property>
         <property name="iconSize">
          <size>
-          <width>50</width>
-          <height>50</height>
+          <width>40</width>
+          <height>40</height>
          </size>
         </property>
         <property name="default">
@@ -131,9 +131,7 @@ border-radius: 5px
 */</string>
         </property>
         <property name="text">
-         <string>Image
-Filter
-1</string>
+         <string>Mustache</string>
         </property>
         <property name="iconSize">
          <size>
@@ -182,9 +180,7 @@ border-radius: 5px
 */</string>
         </property>
         <property name="text">
-         <string>Image
-Filter
-2</string>
+         <string>Glasses</string>
         </property>
         <property name="iconSize">
          <size>
@@ -233,9 +229,7 @@ border-radius: 5px
 */</string>
         </property>
         <property name="text">
-         <string>Image
-Filter
-3</string>
+         <string>Piggy</string>
         </property>
         <property name="iconSize">
          <size>
@@ -249,7 +243,7 @@ Filter
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pb_img_filt_5">
+       <widget class="QPushButton" name="pb_p1_next">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -286,6 +280,10 @@ border-radius: 5px
         <property name="text">
          <string>Next
 Page</string>
+        </property>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/resources/icons/next.png</normaloff>:/resources/icons/next.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -473,7 +471,7 @@ background-repeat: no-repeat;
        <enum>QLayout::SetDefaultConstraint</enum>
       </property>
       <item>
-       <widget class="QPushButton" name="pb_cancel_share_2">
+       <widget class="QPushButton" name="pb_p2_back">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -508,16 +506,17 @@ border-radius: 5px
 */</string>
         </property>
         <property name="text">
-         <string>Cancel</string>
+         <string>Prev
+Page</string>
         </property>
         <property name="icon">
          <iconset resource="resources.qrc">
-          <normaloff>:/resources/icons/cancel.png</normaloff>:/resources/icons/cancel.png</iconset>
+          <normaloff>:/resources/icons/back.png</normaloff>:/resources/icons/back.png</iconset>
         </property>
         <property name="iconSize">
          <size>
-          <width>50</width>
-          <height>50</height>
+          <width>40</width>
+          <height>40</height>
          </size>
         </property>
         <property name="default">
@@ -526,7 +525,58 @@ border-radius: 5px
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pb_img_filt_6">
+       <widget class="QPushButton" name="pb_img_filt_4">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>14</pointsize>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="toolTip">
+         <string/>
+        </property>
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">color: rgb(0, 0, 0);
+background-color: rgb(136, 138, 133);
+text-align: center center
+/*border: 1px solid rgb(193, 125, 17) */
+/*border-color: rgb(193, 125, 17);
+border-radius: 5px
+*/</string>
+        </property>
+        <property name="text">
+         <string>Image
+Filter
+4</string>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>40</width>
+          <height>40</height>
+         </size>
+        </property>
+        <property name="default">
+         <bool>false</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pb_img_filt_5">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -577,7 +627,7 @@ Filter
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pb_img_filt_7">
+       <widget class="QPushButton" name="pb_img_filt_6">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -628,7 +678,7 @@ Filter
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pb_img_filt_8">
+       <widget class="QPushButton" name="pb_img_filt_ok">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
           <horstretch>0</horstretch>
@@ -643,7 +693,7 @@ Filter
         </property>
         <property name="font">
          <font>
-          <pointsize>14</pointsize>
+          <pointsize>16</pointsize>
           <bold>true</bold>
          </font>
         </property>
@@ -663,60 +713,11 @@ border-radius: 5px
 */</string>
         </property>
         <property name="text">
-         <string>Image
-Filter
-7</string>
+         <string>OK</string>
         </property>
-        <property name="iconSize">
-         <size>
-          <width>40</width>
-          <height>40</height>
-         </size>
-        </property>
-        <property name="default">
-         <bool>false</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pb_img_filt_9">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="minimumSize">
-         <size>
-          <width>0</width>
-          <height>0</height>
-         </size>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>14</pointsize>
-          <bold>true</bold>
-         </font>
-        </property>
-        <property name="toolTip">
-         <string/>
-        </property>
-        <property name="layoutDirection">
-         <enum>Qt::LeftToRight</enum>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">color: rgb(0, 0, 0);
-background-color: rgb(136, 138, 133);
-text-align: center center
-/*border: 1px solid rgb(193, 125, 17) */
-/*border-color: rgb(193, 125, 17);
-border-radius: 5px
-*/</string>
-        </property>
-        <property name="text">
-         <string>Image
-Filter
-8</string>
+        <property name="icon">
+         <iconset resource="resources.qrc">
+          <normaloff>:/resources/icons/ok.png</normaloff>:/resources/icons/ok.png</iconset>
         </property>
         <property name="iconSize">
          <size>
